--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -1,6 +1,6 @@
-*{
-	border: 1px solid red !important;
-}
+// *{
+// 	border: 1px solid red !important;
+// }
 
 body{
     font-family: 'Lato', sans-serif;
