--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -1,25 +1,31 @@
-// *{
-// 	border: 1px solid red !important;
-// }
+/**{
+	border: 1px solid red !important;
+}*/
 
 body{
-    font-family: 'Lato', sans-serif;
-    color: #747704;
-    font-weight: 300;
+	font-family: 'Lato', sans-serif;
+	color: #747704;
+	font-weight: 300;
+}
+
+@media (min-width: 1200px) {
+	.container {
+		width: 970px;
+	}
 }
 
 .text-muted{
-    color: #BCBBBB;
+	color: #BCBBBB;
 }
 
 .text-thin{
-    font-weight: 100;
+	font-weight: 100;
 }
 
 .title-super{
-    font-size: 60px;
+	font-size: 60px;
 }
 
 .title-logo{
-    margin-top: 20px;
+	margin-top: 20px;
 }
